promxy/promxy-ingress.yaml
# promxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promxy-ingress
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: promxy.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: promxy
                port:
                  number: 8082
